--- a/style.css
+++ b/style.css
@@ -30,13 +30,14 @@ button {
 
 .game-mode {
     position: absolute;
-    top: 15%;
+    top: 10%;
     font-size: 2em;
+    text-decoration: underline;
 }
 
 .turn {
     position: absolute;
-    top: 15%;
+    top: 20%;
     font-size: 2em;
 }
 
