--- a/style.css
+++ b/style.css
@@ -1,227 +1,235 @@
-*, *::after, *::before{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Press Start 2P', cursive;
+  margin: 0;
+  padding: 0;
+  font-family: "Press Start 2P", cursive;
 }
 
 button {
-    font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
 }
 
-.container{
-    position: relative;
+.container {
+  position: relative;
 }
 
-.board{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+.board {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .game-mode {
-    position: absolute;
-    top: 10%;
-    font-size: 2em;
-    text-decoration: underline;
+  position: absolute;
+  top: 10%;
+  font-size: 2em;
+  text-decoration: underline;
 }
 
 .turn {
-    position: absolute;
-    top: 20%;
-    font-size: 2em;
+  position: absolute;
+  top: 20%;
+  font-size: 2em;
 }
 
-.line1, .line2, .line3 {
-    display: flex;
+.line1,
+.line2,
+.line3 {
+  display: flex;
 }
-
 
 .cell {
-    border: 2px solid black;
-    width: 100px;
-    height: 100px;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  border: 2px solid black;
+  width: 100px;
+  height: 100px;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .line1 .cell {
-    border-top: none;
+  border-top: none;
 }
 
 .line3 .cell {
-    border-bottom: none;
+  border-bottom: none;
 }
 
-.line1, .line2, .line3, .cell:first-child {
-    border-left: none;
+.line1,
+.line2,
+.line3,
+.cell:first-child {
+  border-left: none;
 }
 
-
-.line1, .line2, .line3, .cell:last-child {
-    border-right: none;
+.line1,
+.line2,
+.line3,
+.cell:last-child {
+  border-right: none;
 }
 
 .cell.x:hover {
-    cursor: not-allowed;
+  cursor: not-allowed;
 }
 
 .cell.o:hover {
-    cursor: not-allowed;
+  cursor: not-allowed;
 }
 
-.cell.x::before, 
+.cell.x::before,
 .cell.x::after {
-    background-color: black;
+  background-color: black;
 }
 
 .board.x .cell:not(.x):not(.o):hover::before,
 .board.x .cell:not(.x):not(.o):hover::after {
-    background-color: lightgrey;
+  background-color: lightgrey;
 }
 
-.cell.x::before, 
+.cell.x::before,
 .cell.x::after,
 .board.x .cell:not(.x):not(.o):hover::before,
 .board.x .cell:not(.x):not(.o):hover::after {
-    content: '';
-    display: block;
-    width: 90px;
-    height: 8px;
-    margin: 16px;
-    align-self: center;
+  content: "";
+  display: block;
+  width: 90px;
+  height: 8px;
+  margin: 16px;
+  align-self: center;
 }
 
 .cell.x::before,
 .board.x .cell:not(.x):not(.o):hover::before {
-    transform: rotate(45deg) translate(14px, 14px);
+  transform: rotate(45deg) translate(14px, 14px);
 }
 .cell.x::after,
 .board.x .cell:not(.x):not(.o):hover::after {
-    transform: rotate(-45deg) translate(14px, -14px);
+  transform: rotate(-45deg) translate(14px, -14px);
 }
 
-.cell.o::before, 
+.cell.o::before,
 .cell.o::after {
-    background-color: black;
+  background-color: black;
 }
 
 .board.o .cell:not(.x):not(.o):hover::before,
 .board.o .cell:not(.x):not(.o):hover::after {
-    background-color: lightgrey;
+  background-color: lightgrey;
 }
 
-.cell.o::before, 
+.cell.o::before,
 .cell.o::after,
 .board.o .cell:not(.x):not(.o):hover::before,
 .board.o .cell:not(.x):not(.o):hover::after {
-    content: '';
-    position: absolute;
-    border-radius: 50%;
-    align-self: center;
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  align-self: center;
 }
 
 .cell.o::before,
 .board.o .cell:not(.x):not(.o):hover::before {
-    width: 90px;
-    height: 90px;
+  width: 90px;
+  height: 90px;
 }
 .cell.o::after,
 .board.o .cell:not(.x):not(.o):hover::after {
-    width: 70px;
-    height: 70px;
-    background-color: white;
+  width: 70px;
+  height: 70px;
+  background-color: white;
 }
 
 .choose-game-text {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    bottom: 18%;
-    font-size: 1.5em;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  bottom: 18%;
+  font-size: 1.5em;
 }
 
-.choose-game{
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    bottom: 10%;
+.choose-game {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  bottom: 10%;
 }
-
-
 
 .choose-game button {
-    font-size: 1em;
-    padding: 0.5em;
-    margin: 0 .5em;
-    background-color: white;
-    border: 2px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-size: 1em;
+  padding: 0.5em;
+  margin: 0 0.5em;
+  background-color: white;
+  border: 2px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
 .choose-game button:hover {
-    background-color: black;
-    border: 2px solid white;
-    color: white;
+  background-color: black;
+  border: 2px solid white;
+  color: white;
 }
 
 .choose-game button.active {
-    background-color: black;
-    border: 2px solid white;
-    color: white;
+  background-color: black;
+  border: 2px solid white;
+  color: white;
 }
 
-.game-winning{
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.9);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.game-winning {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.9);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .wins {
-    font-size: 3rem;
-    margin-bottom: 0.25em;
+  font-size: 3rem;
+  margin-bottom: 0.25em;
 }
 
-.restart{
-    font-size: 2rem;
-    padding: 0.2em;
-    border: 2px solid black;
-    background-color: white;
-    cursor: pointer;
+.restart {
+  font-size: 2rem;
+  padding: 0.2em;
+  border: 2px solid black;
+  background-color: white;
+  cursor: pointer;
 }
 
 .restart:hover {
-    background-color: black;
-    border: 2px solid white;
-    color: white;
+  background-color: black;
+  border: 2px solid white;
+  color: white;
 }
 
 .game-winning.show {
-    display: flex;
+  display: flex;
 }
 
+.choose-game button.modes {
+  display: none;
+}
